src/index.css
*, ::before, ::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

:root {
    --black-1: #222325;
    --green-1: #008e6b;
    --green-2: #5bf2ce;
    --green-3: #53dfbd;
    --green-4: #64ffda;
    --silver-1: #a7c3e5;
    --silver-2: #8392a5;
    --gray-1: #d1d3d7;
    --gray-2: #a6a095;
    --gray-3: #464646;
    --orange: #fbb02d;
}

html {
    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
    background-color: var(--black-1);
    color: var(--gray-1);
}

a {
    color: inherit;
    text-decoration: none;
}

i {
    color: inherit;
}

a > i:hover, li > i:hover {
    color: var(--green-4);
}

.contact-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 10%;
}

.bio-wrapper {
    display: flex;
    padding: 0 10%;
    margin-bottom: 10%;
    justify-content: center;
}

.message-container {
    margin-right: 4rem;
}

.contact-wrapper > h1 {
    text-align: center;
}

.contact-wrapper > h1, .message-container > h1 {
    font-size: 3rem;
    margin-bottom: 48px;
}

.contact-wrapper > h2, .message-container > h2 {
    font-size: 2rem;
    margin-bottom: 32px;
}

.contact-wrapper > p {
    max-width: 680px;
}

.contact-wrapper > p {
    text-align: justify;
    font-size: 1.5rem;
    margin-bottom: 32px;
}

.message-container > p {
    max-width: 800px;
    text-align: justify;
    font-size: 1.5rem;
    margin-bottom: 32px;
    white-space: pre-line;
}

#home-container {
    max-width: 1500px;
    margin-right: auto;
    margin-left: auto;
}

#hello, #introduction-1, #introduction-2 {
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 32px;
}

#hello > h1 {
    font-size: 1.5rem;
}

#introduction-1 > h2 {
    font-size: 48px;
}

#introduction-2 > h3 {
    color: var(--gray-2);
    font-size: 1.8rem;
}

.text-highlight {
    color: var(--green-4);
    font-weight: bold;
}

#header {
    margin: 64px 0 160px 0;
}

.navbar {
    font-size: 2rem;
    font-weight: bold;
    padding: 0 18px;
}

.nav-link {
    padding: 5px 15px;
    border: 3px solid transparent;
    border-radius: 16px;
}

.nav-link:hover {
    border-color: var(--green-2);
}

.active {
    color: var(--black-1);
    background-color: var(--green-2);
}

.tech-stack {
    width: 100%;
}

.social-links, .tech-stack {
    display: inline-block;
    padding: 16px 0;
}

.navbar > ul, .social-links > ul, .tech-stack > ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.social-links > ul, .tech-stack > ul {
    gap: 3rem;
}

.navbar > ul {
    gap: 1.3rem;
}

.tech-stack > ul > li > i:hover .tech-name {
    display: block;
}

.tech-name-container {
    position: relative;
    display: flex;
    justify-content: center;
}

.tech-name {
    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
    position: absolute;
    display: none;
    font-size: 1.3rem;
    color: var(--gray-1);
    background-color: var(--gray-3);
    padding: 3px 15px;
    margin: 16px 0 0 0;
    border-radius: 16px;
}

.tech-stack > ul {
    font-size: 5rem;
    justify-content: space-evenly;
}

.social-links > ul {
    gap: 4rem;
    font-size: 4rem;
}

.home-footer {
    margin-left: 10%;
    margin-right: 10%;
    width: auto;
    display: flex;
    justify-content: right;
    margin-bottom: 10%;
}

#secret-programmer {
    color: var(--green-3);
    font-size: 23rem;
}

.image {
    height: 440px;
    margin-top: 99px;
    padding: 5px;
    border: 1px solid var(--gray-1);
    border-radius: 16px;
    opacity: 0.8;
}

.projects-wrapper {
    margin-bottom: 10%;
}

.projects-wrapper > h1 {
    font-size: 3rem;
    margin-bottom: 48px;
    text-align: center;
    margin-left: 2%;
    margin-right: 2%;
}

.projects-container {
    display: flex;
    gap: 30px;
    flex-wrap: wrap;
    justify-content: center;
    max-width: 1800px;
    margin-right: auto;
    margin-left: auto;
}

.project {
    position: relative;
    width: 450px;
    height: 400px;
    list-style-type: none;
}

.project-header, .project-description {
    text-align: center;
}

.project-description {
    font-size: 1.3rem;
}

.project-tech-stacks-container {
    flex-wrap: wrap;
    justify-content: center;
}

.project-header, .project-description, .project-tech-stacks-container {
    display: none;
    padding: 20px 30px 0 30px;
}

.project-tech-stack {
    font-size: 1.1rem;
    font-weight: bold;
    color: var(--gray-1);
    background-color: var(--green-1);
    padding: 10px 15px;
    margin: 2px;
    border-radius: 32px;
}

.project-tech-stack:hover {
    color: var(--black-1);
    background-color: var(--green-3);
}

.project-image {
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    opacity: 0.8;
    border-radius: 32px;
}

.project-bottom-bar {
    position: absolute;
    display: none;
    justify-content: flex-end;
    gap: 20px;
    width: 100%;
    bottom: 0;
    padding: 10px 40px 30px 0;
}

.project-icon {
    font-size: 2rem;
    color: var(--orange);
    padding: 12px;
}

.project-icon:hover {
    color: var(--green-3);
    background-color: var(--black-1);
    padding: 12px;
    border-radius: 14px;
}

.project:hover .project-description, .project:hover .project-header {
    display: block;
}

.project:hover .project-tech-stacks-container, .project:hover .project-bottom-bar {
    display: flex;
}

.project:hover .project-image {
    opacity: 0.08;
}

/**
 * || Animations
 */
.message-container > h1, #paragraph-1, #paragraph-2, #paragraph-3, #paragraph-4, .tech-stack, .image, #hello, #introduction-1, #introduction-2, #secret-programmer {
    visibility: hidden;
    animation-name: load;
    animation-iteration-count: 1;
}

.message-container > h1, #paragraph-1, #paragraph-2, #paragraph-3, #paragraph-4, .tech-stack, .image, #hello, #introduction-1, #introduction-2 {
    animation-duration: 2s;
}

#secret-programmer {
    animation-duration: 4s;
    animation-direction: alternate;
}

.message-container > h1, #secret-programmer {
    animation-delay: 0.5s;
}

#paragraph-1, #hello {
    animation-delay: 1.5s;
}

#paragraph-2 {
    animation-delay: 2s;
}

#paragraph-3, #introduction-1 {
    animation-delay: 2.5s;
}

#paragraph-4 {
    animation-delay: 3s;
}

.tech-stack, #introduction-2 {
    animation-delay: 3.5s;
}

.image {
    animation-delay: 4s;
}

@keyframes load {
    from {
        visibility: hidden;
        opacity: 0;
    }
    to {
        visibility: visible;
        opacity: 1;
    }
}

.contact-wrapper {
    animation: 3s alternate 0s quick-zoom;
}

@keyframes quick-zoom {
    from {
        transform: scale(0);
    }
    50% {
        transform: scale(1.2);
    }
    to {
        transform: scale(1);
    }
}

.projects-container {
    animation: 0.05s alternate 1s small-signal-interference;
}

.projects-wrapper > h1 {
    animation: 0.05s alternate 1s large-signal-interference;
}

.projects-container, .projects-wrapper > h1 {
    opacity: 0;
    animation-iteration-count: 7;
}

@keyframes large-signal-interference {
    from {
        opacity: 0.05;
        transform: skewX(80deg);
    }
    to {
        opacity: 0.9;
        transform: skewX(-80deg);
    }
}


@keyframes small-signal-interference {
    from {
        opacity: 0.01;
        transform: skewX(10deg);
    }
    to {
        opacity: 0.1;
        transform: skewX(-10deg);
    }
}


/**
 * || Media Queries
 */
@media (width > 1710px) {
    .home-footer {
        max-width: 1380px;
        margin-left: auto;
        margin-right: auto;
    }
}

@media (width < 1350px) {
    .image {
        height: 400px;
    }
}

@media (width < 1280px) {
    .image {
        height: 350px;
    }
}

@media (width < 1180px) {
    .bio-wrapper {
        flex-direction: column;
    }

    .message-container {
        margin-right: 0;
    }

    .message-container > h1 {
        text-align: center;
    }

    .message-container > p {
        max-width: 100%;
    }

    .image {
        margin: 2rem auto;
        height: 500px;
        width: auto;
    }
}

@media (width < 870px) {
    .project {
        margin-right: 2%;
        margin-left: 2%;
    }
}

@media (width < 700px) {
    .social-links > ul {
        font-size: 3rem;
    }

}

@media (width < 470px) {
    .navbar {
        font-size: 1.5rem;
    }

    .image {
        width: 100%;
        height: 100%;
    }

    .message-container > h1, .contact-wrapper > h1, .contact-wrapper > h2, .projects-wrapper > h1 {
        font-size: 2rem;
    }

    .message-container > p, .contact-wrapper > p {
        font-size: 1.3rem;
    }

    #hello > h1 {
        font-size: 1.1rem;
    }

    #introduction-1 > h2 {
        font-size: 1.7rem;
    }

    #introduction-2 > h3 {
        font-size: 1.3rem;
    }

    .home-footer {
        justify-content: center;
    }

    #secret-programmer {
        font-size: 15rem;
    }

    .project {
        width: 100%;
        height: 300px;
    }

    .project-header {
        font-size: 1.2rem;
    }

    .project-description, .project-tech-stack, .project-icon {
        font-size: 1rem;
    }

    .project-tech-stack {
        padding: 2px 6px;
    }

    .project-bottom-bar {
        padding: 0 25px 10px 0;
    }

    .project-icon, .project-icon:hover {
        padding: 6px;
        border-radius: 7px;
    }
}

@media (width < 390px) {
    .tech-stack > ul {
        font-size: 3rem;
    }

    .project {
        width: 100%;
        height: 230px;
    }

    .message-container > h1, .contact-wrapper > h1, .contact-wrapper > h2, .projects-wrapper > h1 {
        font-size: 1.5rem;
    }

    #introduction-1 > h2 {
        font-size: 1.5rem;
    }

    .message-container > p, .contact-wrapper > p {
        font-size: 1.2rem;
    }

    .project-header {
        font-size: 0.9rem;
    }

    .project-description, .project-tech-stack, .project-icon {
        font-size: 0.7rem;
    }
}

@media (width < 210px) {
    #header {
        margin: 32px 0 80px 0;
    }

    .projects-wrapper > h1 {
        margin-bottom: 24px
    }

    .nav-link, .projects-wrapper > h1 {
        font-size: 1rem;
    }

    .project-header, .project-description, .project-tech-stacks-container {
        padding: 10px 20px 0 20px
    }

    .project-bottom-bar {
        gap: 10px;
    }
}

@media (width < 170px) {
    .project-header {
        font-size: 0.8rem;
    }

    .project-description, .project-tech-stack, .project-icon {
        font-size: 0.6rem;
    }

    .project-bottom-bar {
        gap: 5px;
    }
}

@media (width < 140px) {
    .nav-link {
        padding: 3px 5px;
    }

    .nav-link, .projects-wrapper > h1 {
        font-size: 0.8rem;
    }

    .project-header {
        font-size: 0.7rem;
    }

    .project-description, .project-tech-stack, .project-icon {
        font-size: 0.5rem;
    }

    .project-bottom-bar {
        margin: 0 0 5px 0;
        padding: 0;
        justify-content: center;
    }
}

